# LotGenius

./: .gitignore  CLAUDE.md  README.md  run-demo.sh
.claude/: settings.json
.claude/hooks/: grok-auto-suggest.sh  grok-mission-link.sh  migrate-to-agentvibes.sh  piper-download-voices.sh  play-tts.sh  spt-observatory-manager.sh  spt-speak-enhanced.sh  spt-speak.sh  spt-tts-injector.sh  spt-voice-manager.sh  translate-manager.sh  tts-queue.sh
.github/workflows/: ci.yml
Docs/: Copilot Agent.docx  DEMO.md  Lot Genius 20260506.docx  Lot Genius PoC SoW.docx  Lot-Genius-PoC-PRD.md  Lot-Genius-White-Paper.md  LotGenius2-0.docx  QE-PLAN.md  admin-classification-review-design.md  lot-genius-data-platform-recommendation.md  lot-genius-vnext-design.md  meeting1.txt  steffes-admin-preconfigure-ask.md  teams-surface-plan.md
Docs/specs/: STREAM-P0-SUMMARY.md  comps-embedding-v2.md  demand-competition-template.md  external-context-envelope.md  geo-rollups-template.md  realized-value-template.md
admin-web/: .env.example  .gitignore  ARCHITECTURE.md  MODELING.md  README.md  STREAM-1-SUMMARY.md  index.html  package-lock.json  package.json  vite.config.ts
admin-web/src/: App.test.tsx  App.tsx  calibration.test.ts  calibration.ts  main.tsx  styles.css  vite-env.d.ts
admin-web/src/api/: http.abac.test.ts  http.identity.test.ts  http.ts  index.ts  mock.abac.test.ts  mock.identity.test.ts  mock.ts  types.ts
admin-web/src/components/: Card.test.tsx  Card.tsx  ConfirmDialog.tsx  NeedsReviewLane.tsx  Pen.tsx  SelectionBar.tsx  Silhouette.tsx  Tabs.test.tsx  Tabs.tsx  UndoToast.tsx
admin-web/src/test/: fixtures.ts
admin-web/src/views/: CalibrationView.test.tsx  CalibrationView.tsx  PiiAccessView.test.tsx  PiiAccessView.tsx  ReviewView.tsx  SourceCurationView.test.tsx  SourceCurationView.tsx  UsersGroupsView.test.tsx  UsersGroupsView.tsx
explorer-web/: .env.example  .gitignore  README.md  STREAM-3-SUMMARY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
explorer-web/src/: App.test.tsx  App.tsx  main.tsx  styles.css  vite-env.d.ts
explorer-web/src/components/: DetailPanel.tsx  FacetPanel.tsx  RadialGraph.tsx
explorer-web/src/comps/: comps.test.ts  comps.ts
explorer-web/src/data/: generate.test.ts  generate.ts  source.ts  taxonomy.ts  types.ts
explorer-web/src/facets/: facets.test.ts  facets.ts
explorer-web/src/graph/: buildGraph.test.ts  buildGraph.ts  layout.test.ts  layout.ts  select.test.ts  select.ts
explorer-web/src/test/: fixtures.ts
infra/: .terraform.lock.hcl  README.md  RUNBOOK.md  backend.tf  container_app.tf  foundry.tf  keyvault.tf  main.tf  monitoring.tf  outputs.tf  postgres.tf  providers.tf  rbac.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/db/: STREAM-P4-ABAC-SUMMARY.md  identity.sql  schema.sql
src/admin-shim/: Cargo.toml  schema.admin.sql
src/admin-shim/.cargo/: config.toml
src/admin-shim/src/: abac.rs  api.rs  config.rs  db.rs  identity.rs  lib.rs  main.rs
src/admin-shim/tests/: abac_http.rs  gates.rs  http.rs  identity_abac.rs
src/foundry-agent/: Cargo.toml
src/foundry-agent/src/: main.rs
src/lotgenius-contract/: Cargo.toml
src/lotgenius-contract/src/: lib.rs
src/mcp-server/: .dockerignore  Cargo.toml  Dockerfile  README.md  STREAM-P3-SEAM-SUMMARY.md  pyproject.toml  server.py
src/mcp-server/.cargo/: config.toml
src/mcp-server/contracts/: analyze.schema.json  comps_search.schema.json  pii_scrub.schema.json  structured_query.schema.json
src/mcp-server/src/: contracts.rs  identity.rs  main.rs  runtime.rs
src/orchestrator/: README.md  STREAM-2-SUMMARY.md  harness.py  pyproject.toml
src/orchestrator/agent/: agent_definition.json
src/orchestrator/fixtures/: both.json  demand.json  money_shot.json  realized_value.json  refusal.json  structured.json
src/orchestrator/lotgenius_orchestrator/: __init__.py  demo.py  foundry_app.py  identity.py  mcp_client.py  orchestrator.py  router.py
src/orchestrator/lotgenius_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/orchestrator/lotgenius_orchestrator/webapp/: __init__.py  __main__.py  app.py  page.py
src/orchestrator/scripts/: run_live_demo.py
src/orchestrator/tests/: test_contracts.py  test_e2e_live.py  test_e2e_mocked.py  test_foundry_config.py  test_identity.py  test_mcp_caller.py  test_router.py  test_webapp.py
