[package]
name = "lotgenius-foundry-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Registers the lotgenius-orchestrator agent in the Azure AI Foundry Agent Service, binding the MCP seam as an MCP tool over managed identity (PRD §5.3/§8.1). Rust replacement for the Python foundry_app scaffold — keeps the stack single-language."
license = "LicenseRef-Proprietary"
publish = false

[[bin]]
name = "lotgenius-foundry-agent"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
