[project]
name = "lotgenius-mcp"
version = "0.1.0"
description = "Lot Genius MCP server — tool contracts + scaffold (Kadima Consulting). Framework runtime delivered separately as a built image."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    # Runtime data access (used by the framework image, listed for the contract scaffold):
    # "psycopg[binary]>=3.2",      # pgvector access
    # "azure-identity>=1.19",       # managed-identity auth
    # "pyodbc>=5.1",                # Synapse Serverless
]

[tool.lotgenius]
# The four published tools (contracts in ./contracts). Implementations are
# Background IP, provided by the deployed runtime image — NOT vendored here.
tools = ["comps_search", "structured_query", "pii_scrub", "analyze"]
